# ROS-Omniwheel-Robot-Autonomous-Parking

./: README.md  fcc_sms_text_classification_project.ipynb
omnirobot/: CMakeLists.txt  package.xml  task.rviz
omnirobot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  joint_names_omnirobot.yaml  local_costmap_params.yaml  move_base_params.yaml
omnirobot/launch/: display.launch  gazebo.launch  state.launch  task.launch
omnirobot/maps/: map.pgm  map.yaml
omnirobot/meshes/: R1_1_Link.STL  R1_2_Link.STL  R1_3_Link.STL  R1_4_Link.STL  R2_1_Link.STL  R2_2_Link.STL  R2_3_Link.STL  R2_4_Link.STL  R3_1_Link.STL  R3_2_Link.STL  R3_3_Link.STL  R3_4_Link.STL  R4_1_Link.STL  R4_2_Link.STL  R4_3_Link.STL  R4_4_Link.STL  R5_1_Link.STL  R5_2_Link.STL  R5_3_Link.STL  R5_4_Link.STL  R6_1_Link.STL  R6_2_Link.STL  R6_3_Link.STL  R6_4_Link.STL  R7_1_Link.STL  R7_2_Link.STL  R7_3_Link.STL  R7_4_Link.STL  R8_1_Link.STL  R8_2_Link.STL  R8_3_Link.STL  R8_4_Link.STL  Wheel_1_Link.STL  Wheel_2_Link.STL  Wheel_3_Link.STL  Wheel_4_Link.STL  base_link.STL
omnirobot/models/maze/: model.sdf
omnirobot/models/maze1/: model.sdf
omnirobot/models/newwalls/: model.config  model.sdf
omnirobot/models/walls/: model.sdf
omnirobot/scripts/: navigate_to_parking.py  send_goal.py
omnirobot/urdf/: omnirobot.csv  omnirobot.urdf
omnirobot/wrld/: maze.world  myworld.world  new.world  newworld.world
